// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`HeaderBase should render snapshot correctly with Compact variant 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flexDirection": "row",
        "gap": 16,
      },
      false,
    ]
  }
  testID="header"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
        }
      }
      testID="header-title"
    >
      Sample HeaderBase Title
    </Text>
  </View>
</View>
`;

exports[`HeaderBase variant functionality renders snapshot correctly with Compact variant 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flexDirection": "row",
        "gap": 16,
      },
      false,
    ]
  }
  testID="header"
>
  <View
    style={
      {
        "alignItems": "center",
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 16,
          "letterSpacing": 0,
          "lineHeight": 24,
          "textAlign": "center",
        }
      }
      testID="header-title"
    >
      Compact Variant Header
    </Text>
  </View>
</View>
`;

exports[`HeaderBase variant functionality renders snapshot correctly with Display variant 1`] = `
<View
  style={
    [
      {
        "backgroundColor": "#ffffff",
        "flexDirection": "row",
        "gap": 16,
      },
      false,
    ]
  }
  testID="header"
>
  <View
    style={
      {
        "alignItems": "flex-start",
        "flex": 1,
      }
    }
  >
    <Text
      accessibilityRole="text"
      style={
        {
          "color": "#121314",
          "fontFamily": "Geist Bold",
          "fontSize": 24,
          "letterSpacing": 0,
          "lineHeight": 32,
          "textAlign": "left",
        }
      }
      testID="header-title"
    >
      Display Variant Header
    </Text>
  </View>
</View>
`;
